Prevent portrait nodelink overspill during redraw

--- a/visualizer/style.css
+++ b/visualizer/style.css
@@ -500,6 +500,10 @@ svg.bubbleprof .link-outer {
   z-index: 11;
 }
 
+#node-link.redraw {
+  z-index: 1;
+}
+
 #node-link .sublayout:after {
   display: block;
   top: 8px;
